Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/04_ArbolesBinarios.ipynb
+++ b/AlgoritmosBusqueda/04_ArbolesBinarios.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ArbolesBinarios.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMN4agUrSzfa3CAdZ9GZSEG",
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,13 +34,14 @@
       },
       "source": [
         "<font color=\"Teal\" face=\"Comic Sans MS,arial\">\n",
-        "  <h1 align=\"center\"><i>Árboles Binarios</i></h1>\n",
+        "  <h1 align=\"center\"><i>Arboles Binarios de Búsqueda</i></h1>\n",
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
         "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León</i></h5>\n",
-        "    <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
+        "  <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
+        "  <h5 align=\"center\"><i>Ayudante: Jonathan Ramírez Montes</i></h5>\n",
         "  <h5 align=\"center\"><i>Materia: Manejo de Datos</i></h5>\n",
-        "  </font>"
+        "</font>"
       ]
     },
     {
@@ -49,14 +50,18 @@
         "id": "5c1BVdROlJ9T"
       },
       "source": [
-        "##Introducción \n",
-        "Los árboles binarios son una $\\color{blue}{estructura\\,de\\,datos}$ de gran ayuda para las ciencias en general, pero es fundamental en lo que a las ciencias de la computación se refiere.\n",
+        "# Introducción \n",
+        "Los árboles binarios son una **estructura de datos** de gran ayuda para las ciencias en general, pero es fundamental en lo que a las ciencias de la computación se refiere.\n",
         "\n",
         "Esta estructura surge de manera recurrente en áreas como, teoría de gráficas, inteligencia artificial, bases de datos, sistemas operativos, topología de redes y muchas otras.\n",
         "\n",
-        "De igual manera que con los algoritmos vistos previamente los arboles binarios permiten almacenar el tipo de información que sea necesaria, desde simples valores numéricos, hasta información mas compleja.\n",
+        "De igual manera que con los algoritmos vistos previamente los árboles binarios permiten almacenar el tipo de información que sea necesaria, desde simples valores numéricos, hasta información más compleja.\n",
         "\n",
-        "Como toda estructura de datos (arreglos, listas, pilas, etc), los arboles binarios están conformados principalmente por 2 elementos que los caracterizan: el $\\color{red}{tipo\\,de\\, dato}$ que almacenan y las $\\color{red}{operaciones}$ que se pueden realizar."
+        "Como toda estructura de datos (arreglos, vectores, matrices, listas, pilas, etc), los árboles binarios están conformados principalmente por 2 elementos que los caracterizan: \n",
+        "\n",
+        "\n",
+        "*   **Tipo de dato** que alamacenan: cadenas, caractéres, valores nméricos, etc.\n",
+        "*   **Operaciones** que se pueden realizar: agregar, eliminar, recorrer, etc.\n"
       ]
     },
     {
@@ -65,7 +70,9 @@
         "id": "I-Rer9CzlRBp"
       },
       "source": [
-        "##Árboles Binarios"
+        "# Arboles Binarios\n",
+        "\n",
+        "La forma más básica y elemental de esta estructura de datos, son los árboles binarios y podemos tener diferentes definiciones de los mismo (todas equivalentes)."
       ]
     },
     {
@@ -74,35 +81,17 @@
         "id": "jP_JtWuplT4-"
       },
       "source": [
-        "###Definiciones \n",
-        "Dependiendo del punto de vista, la definición de árbol binario difiere un poco, sin embargo para fines prácticos es lo mismo. La forma mas sencilla de definir un árbol binario, es como lo hace la teoría de gráficas."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "wqo5jjPjlX5d"
-      },
-      "source": [
-        "**Árbol Binario**: Es un grafo **conexo** y **acíclico**, conformado por nodos y aristas."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ErxAqhHDlbKF"
-      },
-      "source": [
-        "La siguiente definición (que es la que mas se apega a lo que veremos en el curso), es la definición desde el punto de vista de ciencias de la computación."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ToRORK7FlfsH"
-      },
-      "source": [
-        "**Árbol Binario**: Estructura de datos **no lineal**, conformada por nodos, donde cada nodo puede tener a lo mas **dos hijos**."
+        "## Definiciones \n",
+        "\n",
+        "Dependiendo del punto de vista, la definición de árbol binario difiere un poco, sin embargo para fines prácticos es lo mismo. \n",
+        "\n",
+        "La forma más sencilla de definir un árbol binario, es como lo hace la teoría de gráficas.\n",
+        "\n",
+        "**Árbol Binario**: Es un grafo **conexo** y **acíclico**, conformado por nodos y aristas.\n",
+        "\n",
+        "La siguiente definición (que es la que mas se apega a lo que veremos en el curso), es la definición desde el punto de vista de ciencias de la computación.\n",
+        "\n",
+        "**Árbol Binario**: Estructura de datos **no lineal**, conformada por nodos, donde cada nodo puede tener a lo más **dos hijos**."
       ]
     },
     {
@@ -111,69 +100,46 @@
         "id": "2nxWhjPYliKk"
       },
       "source": [
-        "### Elementos de un árbol binario\n",
+        "## Elementos de un árbol binario\n",
         "\n",
-        "El nodo a partir del cual se comienza a formal el árbol, tiene un nombre especial ya que es importante ubicarlo en todo momento. A este nodo se le conoce como **raíz**."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RyY4Gxenlm2s"
-      },
-      "source": [
-        "Todo nodo que no tenga al menos un hijo, se le conoce como **hoja**."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "5A1h75aQlqGC"
-      },
-      "source": [
-        "**Cada nodo pertenece a un nivel**, comenzando por la **raíz cuyo nivel es cero**. Los hijos directos de la raíz pertenecen al nivel 1 o dicho en otras palabras, pertenecen a un nivel mas que el de su padre. $\\color{red}{¿Puedes\\,dar\\,una\\,definici\\acute{o}n\\,recursiva\\,para\\,esta\\,funci\\acute{o}n?}.$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "qmrBETGulv9-"
-      },
-      "source": [
-        "La **altura de un árbol es el nivel mas profundo** al que se puede llegar, a partir de la raíz. De manera recursiva podemos decir que la altura de un árbol (a partir de un nodo n) es la mayor altura de cualquiera de sus dos hijos.  $\\color{red}{¿Puedes\\,dar\\,una\\,definici\\acute{o}n\\,recursiva\\,para\\,esta\\,funci\\acute{o}n?}.$\n",
+        "El nodo a partir del cual se comienza a formal el árbol, tiene un nombre especial ya que es importante ubicarlo en todo momento. A este nodo se le conoce como **raíz**.\n",
         "\n",
+        "Todo nodo que no tenga al menos un hijo, se le conoce como **hoja**.\n",
+        "\n",
+        "**Cada nodo pertenece a un nivel**, comenzando por la **raíz cuyo nivel es cero**. Los hijos directos de la raíz pertenecen al nivel 1 o dicho en otras palabras, pertenecen a un nivel más que el de su padre. \n",
+        "\n",
+        "¿Podrías dar una definición recursiva para la función nivel?.\n",
+        "\n",
+        "La **altura de un árbol es el nivel más profundo** al que se puede llegar, a partir de la raíz. De manera recursiva podemos decir que la altura de un árbol (a partir de un nodo n) es la mayor altura de cualquiera de sus dos hijos.\n",
+        "\n",
+        "¿Podrías dar una definición recursiva para la función altura?.\n",
+        "\n",
+        "A continuación se muestra un nodo binario\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/nodo.png?raw=1\" width=\"600\"> \n",
         "</center>\n",
-        "Figura 1: Nodo Binario\n",
         "\n",
+        "La siguiente imagen muestra un árbol binario \n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/arbolb.png?raw=1\" width=\"600\"> \n",
         "</center>\n",
-        "Figura 2: Árbol Binario\n",
         "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "DDx2e1UCl0Ff"
-      },
-      "source": [
-        "En la Figura 2 se puede apreciar un árbol binario, cuya raíz\n",
+        "En la segunda imagen se puede apreciar un árbol binario, cuya raíz\n",
         "contiene el valor 2. \n",
         "\n",
-        "Esta compuesto por 9 nodos, cuyo contenido son valores\n",
-        "enteros.\n",
-        "Posee 4 niveles, desde el cero hasta el nivel 3.\n",
+        "Contiene nodos intermedios con valores 7, 6, 5 y 9.\n",
+        "\n",
+        "Y cuyas hojas contienen a los valoress 2, 5, 11 y 4.\n",
+        "\n",
+        "Esta compuesto por 9 nodos, cuyo contenido son valores enteros.\n",
+        "Posee 4 niveles, desde el cero hasta el nivel tres.\n",
         "\n",
         "Y la altura de este árbol es 3.\n",
         "\n",
-        "**¿Qué operaciones podrías definir para este tipo de árboles?**\n",
+        "**¿Qué operaciones podrías definir para este tipo de árboles?.**\n",
         "\n",
         "**¿A que orden de complejidad pertenecen cada una de estas\n",
-        "operaciones?**."
+        "operaciones?.**\n"
       ]
     },
     {
@@ -182,26 +148,21 @@
         "id": "EePNjK-mnl9a"
       },
       "source": [
-        "### **Operaciones sobre AB**\n",
+        "## Operaciones sobre Arboles Binarios (AB)\n",
         "\n",
-        "Dado que la definición de $\\color{red}{estructura\\,de\\,datos}$ nos pide\n",
-        "identificar el tipo de dato que almacena dicha estructura, así como las operaciones principales que se pueden realizar sobre esta, procedemos a definirlas. Las principales operaciones que se pueden realizar sobre un AB son las siguientes:"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ReBvfj7WnpbV"
-      },
-      "source": [
-        "* **Crear Árbol**: formalismo para indicar que se tiene que\n",
+        "Dado que la definición de **estructura de datos** nos pide\n",
+        "identificar el tipo de dato que almacena dicha estructura, así como las operaciones principales que se pueden realizar sobre esta, procedemos a definirlas. \n",
+        "\n",
+        "Las principales operaciones que se pueden realizar sobre un AB son las siguientes:\n",
+        "\n",
+        "* **Crear Arbol**: formalismo para indicar que se tiene que\n",
         "construir un AB.\n",
         "\n",
         "* **Eliminar Arbol**: elimina por completo el AB.\n",
         "\n",
-        "* **Nivel**: calcula el nivel de un nodo.\n",
+        "* **Nivel**: calcúla el nivel de un nodo.\n",
         "\n",
-        "* **Altura**: Calcula la altura a partir de un nodo.\n",
+        "* **Altura**: calcúla la altura a partir de un nodo.\n",
         "\n",
         "* **Insertar Nodo**: recibe un valor, guarda un valor y lo inserta en el árbol.\n",
         "\n",
@@ -212,9 +173,9 @@
         "* **Recorridos**: los arboles se pueden recorrer de diferentes\n",
         "formas, siendo las mas comunes las siguientes.\n",
         "\n",
-        "  *     **EnOrden**: primero se visita el hijo izquierdo, después se visita la raíz y \u001cnalmente el hijo derecho. Tomando el árbol de la \u001cgura 2, este recorrido mostraría los datos en este orden [2,7,5,6,11,2,5,4,9]\n",
-        "  *     **PreOrden**: primero se visita la raíz, después se visita el hijo izquierdo y \u001cnalmente el hijo derecho. Tomando el árbol de la \u001cgura 2, este recorrido mostraría los datos en este orden [2,7,2,6,5,11,5,9,4]\n",
-        "  *     **PostOrden**: primero se visita el hijo izquierdo, después se visita el hijo derecho y \u001cnalmente la raíz. Tomando el árbol de la \u001cgura 2, este recorrido mostraría los datos en este orden [2,5,11,6,7,4,9,5,2]"
+        "  *     **EnOrden**: primero se visita el hijo izquierdo, después se visita la raíz y finalmente el hijo derecho. Tomando el árbol de la figura 2, este recorrido mostraría los datos en este orden [2,7,5,6,11,2,5,4,9]\n",
+        "  *     **PreOrden**: primero se visita la raíz, después se visita el hijo izquierdo y finalmente el hijo derecho. Tomando el árbol de la figura 2, este recorrido mostraría los datos en este orden [2,7,2,6,5,11,5,9,4]\n",
+        "  *     **PostOrden**: primero se visita el hijo izquierdo, después se visita el hijo derecho y finalmente la raíz. Tomando el árbol de la figura 2, este recorrido mostraría los datos en este orden [2,5,11,6,7,4,9,5,2]"
       ]
     },
     {
@@ -223,7 +184,7 @@
         "id": "rEMHdlKfnpwB"
       },
       "source": [
-        "## **Árboles Binarios de Búsqueda (Ordenados)**"
+        "# **Árboles Binarios de Búsqueda (Ordenados)**"
       ]
     },
     {
@@ -232,7 +193,7 @@
         "id": "2ZUPvysCnt1U"
       },
       "source": [
-        "### Características\n",
+        "## Características\n",
         "\n",
         "Los Arboles Binarios de Búsqueda (u Ordenados) es una estructura de datos muy parecida a los arboles binarios, pero con la peculiaridad de que cada elemento que se agrega (o elimina) del árbol se lleva a cabo de tal manera que **se conserva un orden** dentro del mismo.\n",
         "\n",
@@ -249,7 +210,7 @@
         "id": "LvVFnjttnust"
       },
       "source": [
-        "### Definición Formal \n",
+        "## Definición Formal \n",
         "\n",
         "***Arbol Binario de Búsqueda (ABB)***\n",
         "\n",
@@ -286,7 +247,7 @@
         "id": "8RkyR2Isn5A4"
       },
       "source": [
-        "### Operaciones sobre ABB\n",
+        "## Operaciones sobre ABB\n",
         "\n",
         "Al igual que con los AB, los ABB son caracterizados por el tipo de dato que almacena cada nodo, así como el conjunto de operaciones que se pueden llevar a cabo sobre estos.\n",
         "\n",
@@ -307,9 +268,7 @@
         "id": "o8rjhI9dn5Za"
       },
       "source": [
-        "## Arboles AVL (Balanceados)\n",
-        "\n",
-        "> Bloc con sangría"
+        "# Arboles AVL (Balanceados)\n"
       ]
     },
     {
@@ -318,7 +277,7 @@
         "id": "TKb-UU2Vn5wq"
       },
       "source": [
-        "### Características\n",
+        "## Características\n",
         "\n",
         "Los Arboles AVL (o balanceados) le deben su nombre a los creadores de este tipo de árboles, Georgii Adelson-Velskii y Yevgeniy Landis.\n",
         "\n",
@@ -337,7 +296,7 @@
         "id": "ywRyFRoFog88"
       },
       "source": [
-        "### Definición Formal \n",
+        "## Definición Formal \n",
         "\n",
         "Arbol AVL (AAVL)\n",
         "\n",
@@ -378,7 +337,7 @@
         "id": "8ThH3ht2oh1N"
       },
       "source": [
-        "### Operaciones sobre AAVL\n",
+        "## Operaciones sobre AAVL\n",
         "\n",
         "Al igual que con los ABB, los AAVL son caracterizados por el tipo de dato que almacena cada nodo, así como el conjunto de operaciones que se pueden llevar a cabo sobre estos. Y podríamos pensar que en este caso cada nodo almacena un valor adicional conocido como **factor de equilibrio**, mismo que nos indica que tan balanceado se encuentra ese nodo.\n",
         "\n",
@@ -404,7 +363,7 @@
         "id": "RV3UEtNWoiXE"
       },
       "source": [
-        "### Factor de Equilibrio (FE)\n",
+        "## Factor de Equilibrio (FE)\n",
         "\n",
         "Dado que por definición los AAVL siempre se encuentran balanceados, al insertar o eliminar un dato solo se podrá dar uno de los siguientes 4 casos:\n",
         "\n",
@@ -425,14 +384,11 @@
         "id": "WVOi8-09pDwL"
       },
       "source": [
-        "## Referencias\n",
+        "# Referencias\n",
         "\n",
         "1.  Thomas H. Cormen: Introduction to Algorithms.\n",
-        "\n",
         "2.  Referencias Libro Web: Introduccion a Python.\n",
-        "\n",
         "3.  Referencias Daniel T. Joyce: Object-Oriented Data Structures.\n",
-        "\n",
         "4.  Referencias John C. Mitchell: Concepts in programing Languages."
       ]
     }
