Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/04_2_ArbolAdivinador.ipynb
+++ b/AlgoritmosBusqueda/04_2_ArbolAdivinador.ipynb
@@ -63,9 +63,13 @@
         "id": "I-Rer9CzlRBp"
       },
       "source": [
-        "# Arboles Adivinador\n",
+        "# Arbol Adivinador\n",
         "\n",
-        "Este árbol (igual que los que veremos más adelante) esta conformado por nodos, la única diferencia es que en este árbol binario de búsqueda, cada nodo interno (nodo que no sea una hoja) contiene una pregunta y cada hoja del árbol es un animal."
+        "Este árbol (igual que los que veremos más adelante) esta conformado por nodos, la única diferencia es que en este árbol binario de búsqueda, cada nodo interno (nodo que no sea una hoja) contiene una pregunta y cada hoja del árbol es un animal.\n",
+        "\n",
+        "Haciendo uso de la estructura de datos conocida como árbol binario, vamos a tratar de adivinar el animal en el que esta pensando el usuario, en caso de adivinar el objetivo se logro, pero en caso contrario se le pide al usuario que indique en que animal estaba pensando y en como diferenciarlo del animal que le mostró el algoritmo.\n",
+        "\n",
+        "La idea detras de este algoritmo es muy sencilla y muy parecida a la **búsqueda binaria**, cada pregunta que se le realiza al usuario descarta una gran cantidad de posibles animales, ya que la respuesta es booleana y eso acota el posible espacio de búsqueda."
       ]
     },
     {
@@ -74,17 +78,25 @@
         "id": "jP_JtWuplT4-"
       },
       "source": [
-        "## Definiciones \n",
+        "## Descripción del algoritmo \n",
         "\n",
-        "Dependiendo del punto de vista, la definición de árbol binario difiere un poco, sin embargo para fines prácticos es lo mismo. \n",
+        "El árbol comienza con un solo nodo (la raíz) y esa es la base de conocimiento, así que el programa le pregunta al usuario si el animal que esta pensando es ese que contiene la raíz, digamos un pajaro.\n",
         "\n",
-        "La forma más sencilla de definir un árbol binario, es como lo hace la teoría de gráficas.\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/ad1.png?raw=1\" width=\"600\"> \n",
+        "</center>\n",
         "\n",
-        "**Árbol Binario**: Es un grafo **conexo** y **acíclico**, conformado por nodos y aristas.\n",
+        "Si la respuesta es afirmativa, el algoritmo cumple con su objetivo ya que adivino el animal que estaba pensando el usuario. Sin embargo en caso de que la respuesta sea negativa, es decir que no se adivino el animal que estaba pensando el usuario, se le pide al usuario indicar el animal que estaba pensando y como diferenciarlo del animal que le mostro el programa.\n",
         "\n",
-        "La siguiente definición (que es la que mas se apega a lo que veremos en el curso), es la definición desde el punto de vista de ciencias de la computación.\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/ad2.png?raw=1\" width=\"500\"> \n",
+        "</center>\n",
         "\n",
-        "**Árbol Binario**: Estructura de datos **no lineal**, conformada por nodos, donde cada nodo puede tener a lo más **dos hijos**."
+        "Se puede apreciar en esta imagen que las respuestas afirmativas son los hijos izquierdos de todo nodo y que las respuestas negativas son los hijos derechos de cada nodo. Conforme el programa es más usado, la base de conocimiento se incremeta cada vez más, hasta tener un árbol suficientemente entrenado como para poder adividinar cualquier animal, sin importar lo especifico que este sea.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/ad3.png?raw=1\" width=\"400\"> \n",
+        "</center>"
       ]
     },
     {
