--- a/AlgoritmosBusqueda/04_2_ArbolAdivinador.ipynb
+++ b/AlgoritmosBusqueda/04_2_ArbolAdivinador.ipynb
@@ -69,7 +69,15 @@
         "\n",
         "Haciendo uso de la estructura de datos conocida como árbol binario, vamos a tratar de adivinar el animal en el que esta pensando el usuario, en caso de adivinar el objetivo se logro, pero en caso contrario se le pide al usuario que indique en que animal estaba pensando y en como diferenciarlo del animal que le mostró el algoritmo.\n",
         "\n",
-        "La idea detras de este algoritmo es muy sencilla y muy parecida a la **búsqueda binaria**, cada pregunta que se le realiza al usuario descarta una gran cantidad de posibles animales, ya que la respuesta es booleana y eso acota el posible espacio de búsqueda."
+        "La idea detras de este algoritmo es muy sencilla y muy parecida a la **búsqueda binaria**, cada pregunta que se le realiza al usuario descarta una gran cantidad de posibles animales, ya que la respuesta es booleana y eso acota el posible espacio de búsqueda.\n",
+        "\n",
+        "De igual manera que con los aŕboles binarios, cada nodo del árbol adivinador se ve de la siguiente forma.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/nodo.png?raw=1\" width=\"600\"> \n",
+        "</center>\n",
+        "\n",
+        "Aunque una sutíl diferencia es que el dato contenido dentro de cada nodo intermedio será una pregunta, las hojas serán aniames, las respuestas afirmativas a cada pregunta son los hijos izquierdos de todo nodo interno y las respuestas negativas son los hijos derechos de cada nodo intermedio."
       ]
     },
     {
@@ -95,8 +103,10 @@
         "Se puede apreciar en esta imagen que las respuestas afirmativas son los hijos izquierdos de todo nodo y que las respuestas negativas son los hijos derechos de cada nodo. Conforme el programa es más usado, la base de conocimiento se incremeta cada vez más, hasta tener un árbol suficientemente entrenado como para poder adividinar cualquier animal, sin importar lo especifico que este sea.\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/ad3.png?raw=1\" width=\"400\"> \n",
-        "</center>"
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/ad3.png?raw=1\" width=\"450\"> \n",
+        "</center>\n",
+        "\n",
+        "Es importante notar que el árbol adivinador será tan preciso como la información que se le proporcione."
       ]
     },
     {
