Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/04_2_ArbolAdivinador.ipynb
+++ b/AlgoritmosBusqueda/04_2_ArbolAdivinador.ipynb
@@ -112,94 +112,14 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "2nxWhjPYliKk"
-      },
-      "source": [
-        "## Elementos de un árbol binario\n",
-        "\n",
-        "El nodo a partir del cual se comienza a formal el árbol, tiene un nombre especial ya que es importante ubicarlo en todo momento. A este nodo se le conoce como **raíz**.\n",
-        "\n",
-        "Todo nodo que no tenga al menos un hijo, se le conoce como **hoja**.\n",
-        "\n",
-        "**Cada nodo pertenece a un nivel**, comenzando por la **raíz cuyo nivel es cero**. Los hijos directos de la raíz pertenecen al nivel 1 o dicho en otras palabras, pertenecen a un nivel más que el de su padre. \n",
-        "\n",
-        "¿Podrías dar una definición recursiva para la función nivel?.\n",
-        "\n",
-        "La **altura de un árbol es el nivel más profundo** al que se puede llegar, a partir de la raíz. De manera recursiva podemos decir que la altura de un árbol (a partir de un nodo n) es la mayor altura de cualquiera de sus dos hijos.\n",
-        "\n",
-        "¿Podrías dar una definición recursiva para la función altura?.\n",
-        "\n",
-        "A continuación se muestra un nodo binario\n",
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/nodo.png?raw=1\" width=\"600\"> \n",
-        "</center>\n",
-        "\n",
-        "La siguiente imagen muestra un árbol binario \n",
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/arbolb.png?raw=1\" width=\"600\"> \n",
-        "</center>\n",
-        "\n",
-        "En la segunda imagen se puede apreciar un árbol binario, cuya raíz\n",
-        "contiene el valor 2. \n",
-        "\n",
-        "Contiene nodos intermedios con valores 7, 6, 5 y 9.\n",
-        "\n",
-        "Y cuyas hojas contienen a los valoress 2, 5, 11 y 4.\n",
-        "\n",
-        "Esta compuesto por 9 nodos, cuyo contenido son valores enteros.\n",
-        "Posee 4 niveles, desde el cero hasta el nivel tres.\n",
-        "\n",
-        "Y la altura de este árbol es 3.\n",
-        "\n",
-        "**¿Qué operaciones podrías definir para este tipo de árboles?.**\n",
-        "\n",
-        "**¿A que orden de complejidad pertenecen cada una de estas\n",
-        "operaciones?.**\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "EePNjK-mnl9a"
-      },
-      "source": [
-        "## Operaciones sobre Arboles Binarios (AB)\n",
-        "\n",
-        "Dado que la definición de **estructura de datos** nos pide\n",
-        "identificar el tipo de dato que almacena dicha estructura, así como las operaciones principales que se pueden realizar sobre esta, procedemos a definirlas. \n",
-        "\n",
-        "Las principales operaciones que se pueden realizar sobre un AB son las siguientes:\n",
-        "\n",
-        "* **Crear Arbol**: formalismo para indicar que se tiene que\n",
-        "construir un AB.\n",
-        "\n",
-        "* **Eliminar Arbol**: elimina por completo el AB.\n",
-        "\n",
-        "* **Nivel**: calcúla el nivel de un nodo.\n",
-        "\n",
-        "* **Altura**: calcúla la altura a partir de un nodo.\n",
-        "\n",
-        "* **Insertar Nodo**: recibe un valor, guarda un valor y lo inserta en el árbol.\n",
-        "\n",
-        "* **Buscar Nodo**: recibe un valor y lo busca dentro del árbol.\n",
-        "\n",
-        "* **Eliminar Nodo**: recibe un valor, lo busca dentro del árbol y en caso de que este contenido en el árbol, este nodo es eliminado.\n",
-        "\n",
-        "* **Recorridos**: los arboles se pueden recorrer de diferentes\n",
-        "formas, siendo las mas comunes las siguientes.\n",
-        "\n",
-        "  *     **EnOrden**: primero se visita el hijo izquierdo, después se visita la raíz y finalmente el hijo derecho. Tomando el árbol de la figura 2, este recorrido mostraría los datos en este orden [2,7,5,6,11,2,5,4,9]\n",
-        "  *     **PreOrden**: primero se visita la raíz, después se visita el hijo izquierdo y finalmente el hijo derecho. Tomando el árbol de la figura 2, este recorrido mostraría los datos en este orden [2,7,2,6,5,11,5,9,4]\n",
-        "  *     **PostOrden**: primero se visita el hijo izquierdo, después se visita el hijo derecho y finalmente la raíz. Tomando el árbol de la figura 2, este recorrido mostraría los datos en este orden [2,5,11,6,7,4,9,5,2]"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "rEMHdlKfnpwB"
       },
       "source": [
-        "# **Árboles Binarios de Búsqueda (Ordenados)**"
+        "# Implementación del algoritmo\n",
+        "\n",
+        "Ya que nos hemos familiarizado con el uso de la POO, vamos a hacer uso de clases para implemetar nuestro algoritmo.\n",
+        "\n",
+        "Vamos a hacer uso de la clase Nodo y de la clase ArbolAdivinador, normalmente la clase Nodo se define como clase interna dentro de la clase ArbolBinario con la intención de ocultar algunas de sus caracteristicas además de reafirmar el hecho de que no se pueden crear árboles si no se tienen nodos."
       ]
     },
     {
@@ -208,15 +128,62 @@
         "id": "2ZUPvysCnt1U"
       },
       "source": [
-        "## Características\n",
+        "## Clase Nodo\n",
         "\n",
-        "Los Arboles Binarios de Búsqueda (u Ordenados) es una estructura de datos muy parecida a los arboles binarios, pero con la peculiaridad de que cada elemento que se agrega (o elimina) del árbol se lleva a cabo de tal manera que **se conserva un orden** dentro del mismo.\n",
+        "La clase Nodo, es una clase muy sencilla que solo consta del constructor, un par de atributos y un par de métodos."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5uykDkOsJYz5",
+        "outputId": "c7f4448c-8781-4d7b-eb8e-c300e0b8bc3a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Clase Nodo que hereda de la clase object\n",
+        "class Nodo(object):\n",
+        "  # Constructor de Nodos\n",
+        "  def __init__(self, value):\n",
+        "    self.izq = None\n",
+        "    self.dato = value\n",
+        "    self.der = None\n",
+        "    self.padre = None\n",
         "\n",
-        "Al conservarse un orden ya es posible realizar búsquedas dentro del árbol de manera más eficiente.\n",
+        "  # Sobrecarga del metodo string para imprimir el dato del nodo\n",
+        "  def __str__(self):\n",
+        "    if self.dato is None:\n",
+        "        pass\n",
+        "    else:\n",
+        "        return '{}'.format(self.dato)\n",
         "\n",
-        "Dado que las búsquedas se realizan de manera mas e\u001cciente esto **reduce considerablemente el orden de complejidad** al que pertenecen la mayoría de las posibles operaciones que se pueden realizar con este tipo de árboles.\n",
+        "# Se crean los nodos necesarios\n",
+        "raiz = Nodo(\"Esto es una prueba\")\n",
+        "hijoizq = Nodo(\"Soy el hijo izquierdo\")\n",
+        "hijoder = Nodo(\"Soy el hijo derecho\")\n",
         "\n",
-        "De manera informal diremos que en un árbol binario de búsqueda, cualquier nodo cumple con la característica de que todos sus hijos (nietos, descendientes, etc) izquierdos contienen valores inferiores al valor que contiene dicho nodo. Y por otro lado todos sus hijos derechos contienen valores superiores al valor de dicho nodo."
+        "# De manera manual se genera un ABB\n",
+        "raiz.izq = hijoizq\n",
+        "raiz.der = hijoder\n",
+        "\n",
+        "# pruebas de la clase Nodo\n",
+        "print(raiz)\n",
+        "print(raiz.izq)\n",
+        "print(raiz.der)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Esto es una prueba\n",
+            "Soy el hijo izquierdo\n",
+            "Soy el hijo derecho\n"
+          ]
+        }
       ]
     },
     {
@@ -225,7 +192,7 @@
         "id": "LvVFnjttnust"
       },
       "source": [
-        "## Definición Formal \n",
+        "## Clase ArbolAdivinador\n",
         "\n",
         "***Arbol Binario de Búsqueda (ABB)***\n",
         "\n",
